# PQMagician

./: .envrc  .gitignore  .gitmodules  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  api.rs  flake.nix  justfile  rust-toolchain.toml
.cargo/: config.toml
.config/: hakari.toml
.github/workflows/: ci.yml  hakari.yml
flake_module/: devshell.nix  fmt.nix
pqmagic/: Cargo.toml
pqmagic-sys/: Cargo.toml  README.md  build.rs
pqmagic-sys/src/: lib.rs
pqmagic-sys/src/kem/: aigis_enc.rs  kyber.rs  ml_kem.rs
pqmagic-sys/src/sig/: aigis_sig.rs  dilithium.rs  ml_dsa.rs  slh_dsa.rs  sphincs_a.rs
pqmagic-test/: Cargo.toml
pqmagic-test/src/: lib.rs
pqmagic/src/: lib.rs
ws-hakari/: Cargo.toml  README.md
