[package]
authors = ["Kh05ifr4nD <meandSSH0219@gmail.com>"]
categories = ["cryptography", "external-ffi-bindings", "no-std"]
description = "FFI Bindings to PQMagic"
edition = "2021"
exclude = ["PQMagic/figure"]
homepage = "https://github.com/Kh05ifr4nD/PQMagician"
keywords = ["bindings", "crypto", "ffi", "no_std", "security"]
license = "Apache-2.0 OR MIT"
links = "pqmagic_std"
name = "pqmagic-sys"
repository = "https://github.com/Kh05ifr4nD/PQMagician"
rust-version = "1.77.2"
version = "0.1.1"

[build-dependencies]
cmake = "0.1.*"
const-str = "0.6.*"

[features]
default = ["kem", "sig", "vendor"]

adv = []

kem = ["aigis_enc", "kyber", "ml_kem"]
aigis_enc = []
kyber = []
ml_kem = []

sig = ["aigis_sig", "dilithium", "ml_dsa", "slh_dsa", "sphincs_a"]
aigis_sig = []
dilithium = []
ml_dsa = []
slh_dsa = []
sphincs_a = []

shake = []
sm3 = []

vendor = []

[package.metadata.docs.rs]
features = ["shake", "sm3"]
targets = ["aarch64-unknown-linux-gnu", "x86_64-unknown-linux-gnu"]
