[package]
authors = ["Kh05ifr4nD <meandSSH0219@gmail.com>"]
categories = ["cryptography", "external-ffi-bindings", "no-std"]
description = "FFI Bindings to PQMagic"
edition = "2024"
exclude = ["PQMagic/figure"]
homepage = "https://github.com/Kh05ifr4nD/PQMagician"
keywords = ["bindings", "crypto", "ffi", "no_std", "security"]
license = "Apache-2.0 OR MIT"
links = "pqmagic_std"
name = "pqmagic-sys"
repository = "https://github.com/Kh05ifr4nD/PQMagician"
rust-version = "1.85.0"
version = "0.2.0"

[build-dependencies]
cmake = "0.1.*"
const-str = "0.6.*"

[features]
default = ["kem", "sig"]
# Commercial, not supported in open source
adv = []
# Key Encapsulation Mechanism
aigis_enc = []
kyber = []
ml_kem = []
kem = ["aigis_enc", "kyber", "ml_kem"]
# Digital Signature
aigis_sig = []
dilithium = []
ml_dsa = []
slh_dsa = []
sphincs_a = []
sig = ["aigis_sig", "dilithium", "ml_dsa", "slh_dsa", "sphincs_a"]
#  Default use sm3 and this hash selector do not work for SLH_DSA and SPHINCS_A
shake = []

[dependencies]
ws-hakari = { version = "0.1", path = "../ws-hakari" }
