[package]
name = "pqmagic-test"
version = "0.1.0"
edition = "2021"
authors = ["Kh05ifr4nD <meandSSH0219@gmail.com>"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/Kh05ifr4nD/PQMagician"

[dependencies.pqmagic]
path = "../pqmagic"
version = "0.1.0"

[dependencies.pqmagic-sys]
path = "../pqmagic-sys"
features = ["shake", "sm3"]
version = "0.1.0"
